--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Risque', cursive;
+  background-color: rgb(15, 181, 15)
 }
 
 a {
@@ -18,4 +19,12 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  background-color: rgb(2, 50, 2);
+  font-size: 48px;
+  margin: 0 auto;
 }
