--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,60 @@ h1 {
   color: white;
   text-align: center;
   background-color: rgb(2, 50, 2);
-  font-size: 48px;
+  font-size: 4em;
   margin: 0 auto;
+}
+
+.animals img {
+  position: relative;
+  width:  300px;
+  height: 300px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+}
+
+#welcomeTxt {
+  font-size: 1.65em;
+  text-align: center;
+}
+
+table {
+  color: #333;
+  font-family: Helvetica, Arial, sans-serif;
+  width: 640px;
+  border-collapse:
+  collapse; border-spacing: 0;
+}
+
+td, th {
+  border: 1px solid transparent; /* No more visible border */
+  height: 30px;
+  transition: all 0.3s;  /* Simple transition for hover effect */
+}
+
+th {
+  background: #DFDFDF;  /* Darken header a bit */
+  font-weight: bold;
+}
+
+td {
+  background: #FAFAFA;
+  text-align: center;
+}
+
+/* Cells in even rows (2,4,6...) are one color */
+tr:nth-child(even) td { background: #F1F1F1; }
+
+/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */
+tr:nth-child(odd) td { background: #FEFEFE; }
+
+tr td:hover { background: #666; color: #FFF; }
+/* Hover cell effect! */
+
+.flex-grid {
+  display: flex;
+}
+.col {
+  flex: 1;
 }
