--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,15 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Risque', cursive;
-  background-color: rgb(15, 181, 15)
+  background-color: rgb(13, 133, 13);
+  background: -webkit-linear-gradient(-90deg, rgb(65, 143, 100), rgb(3, 111, 34));
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 a {
@@ -21,24 +30,33 @@ form div {
   display: inline-block;
 }
 
-h1 {
-  color: white;
+/* #heading {
+  font-family: 'Risque', cursive;
+  color: #DDDDDD;
   text-align: center;
-  background-color: rgb(2, 50, 2);
+  background-color: rgb(3, 70, 3);
   font-size: 4em;
   margin: 0 auto;
-}
+} */
 
 .animals img {
   position: relative;
-  width:  300px;
+  width:  350px;
   height: 300px;
   background-position: 50% 50%;
   background-repeat:   no-repeat;
   background-size:     cover;
 }
 
-#welcomeTxt {
+.welcome {
+  font-size: 1.65em;
+  text-align: center;
+  color: #D5E2D6;
+  margin-left: 202px;
+  margin-right: 202px;
+}
+
+.guess {
   font-size: 1.65em;
   text-align: center;
 }
@@ -81,4 +99,93 @@ tr td:hover { background: #666; color: #FFF; }
 }
 .col {
   flex: 1;
+  text-align: center;
+}
+
+figcaption {
+  font-size: 1.65em;
+}
+
+.chordBtns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1em
+}
+
+.head {
+  text-align: center
+}
+
+hr {
+  border:none;
+  height: 20px;
+ 	width: 90%;
+	height: 50px;
+	margin-top: 0;
+	border-bottom: 1px solid #1f1209;
+	box-shadow: 0 20px 20px -20px #333;
+  margin: -50px auto 10px;
+}
+
+.navBtns {
+  margin: 1em;
+  z-index: 20
+}
+
+.chordList {
+  margin: 1em
+}
+
+.circle {
+  margin: auto;
+  height: 300px;
+  width: 300px;
+  border-radius: 100%;
+  background: #4E8953;
+  margin-top: 150px;
+  transform: translateY(-200px);
+}
+
+h1 {
+  color: #D5E2D6;
+  text-align: center;
+  line-height: 50px;
+  margin-top: -420px;
+  -moz-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg) skewY(1deg);
+-webkit-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg) skewY(1deg);
+-o-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg) skewY(1deg);
+-ms-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg) skewY(1deg);
+transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg) skewY(1deg);
+  /*-----------------------*/
+  text-shadow: 1px 1px #4A744D, 2px 2px #4A744D, 3px 3px #4A744D, 4px 4px #4A744D, 5px 5px #4A744D, 6px 6px #4A744D, 7px 7px #4A744D, 8px 8px #4A744D, 9px 9px #4A744D, 10px 10px #4A744D, 11px 11px #4A744D, 12px 12px #4A744D, 13px 13px #4A744D, 14px 14px #4A744D, 15px 15px #4A744D, 16px 16px #4A744D, 17px 17px #4A744D, 18px 18px #4A744D, 19px 19px #4A744D, 20px 20px #4A744D, 21px 21px #4A744D, 22px 22px #4A744D, 23px 23px #4A744D, 24px 24px #4A744D, 25px 25px #4A744D, 26px 26px 6px #06520C;
+
+}
+
+span:nth-child(3), span:nth-child(7) {
+font-size: 50px;
+}
+
+span:nth-child(1), span:nth-child(9), span:nth-child(5)  {
+  font-size: 100px;
+}
+
+.names {
+  color: #D5E2D6;
+}
+
+.pics {
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+.pics:hover {
+  opacity: 0.65;
+}
+
+#guessCounter {
+  font-size: 2em;
+  text-align: center;
+  margin: 1em 0 1em 0;
 }
