--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Josefin Slab', cursive;
   background-color: rgb(13, 133, 13);
-  background: -webkit-linear-gradient(-90deg, rgb(65, 143, 100), rgb(3, 111, 34));
+  background: -webkit-linear-gradient(-90deg, rgb(76, 167, 117), rgb(3, 111, 34));
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
@@ -185,5 +185,17 @@ span:nth-child(1), span:nth-child(9), span:nth-child(5)  {
 #guessCounter {
   font-size: 2em;
   text-align: center;
-  margin: 1em 0 1em 0;
+  margin-top: 1em;
+}
+
+.subtitle {
+  font-size: 1.5em;
+}
+
+.playB {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: 1em
 }
